fixed:swagger annotation
