# controllers/Article.go
@@ -37,8 +37,15 @@ func (c *ArticleController) Get() {
 
 // @Title GetAll
 // @Description GetAllArticle
-// @Param   body        body    models.User true        "body for user content"
-// @Success 200 {int} models.User.Id
+// @Param   TagId body string true "your appid"
+// @Param	CatalogId body string true "your appid"
+// @Param	CreationTime body string true "your appid"
+// @Param	Filter body string true "your appid"
+// @Param	Sort body string true "your appid"
+// @Param	Order body string true "your appid"
+// @Param	SkipCount body string true "your appid"
+// @Param	MaxResultCount body string true "your appid"
+// @Success 200 Articles By Page
 // @Failure 403 body is empty
 // @router / [get]
 func (c *ArticleController) GetAll() {
